--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
 <body>
     <div class="wrapper">
         <section class="key-section">
-            <div class="key">A
-                <p>Lorem</p>
+            <div data-key class="key">a
+                <p>clap</p>
             </div>
-            <div class="key">A
-                <p>Lorem</p>
+            <div class="key">s
+                <p>hihat</p>
             </div>
-            <div class="key">A
-                <p>Lorem</p>
+            <div class="key">d
+                <p>kick</p>
             </div>
-            <div class="key">A
-                <p>Lorem</p>
+            <div class="key">f
+                <p>openhat</p>
             </div>
-            <div class="key">A
-                <p>Lorem</p>
+            <div class="key">g
+                <p>800m</p>
             </div>
-            <div class="key">A
-                <p>Lorem</p>
+            <div class="key">h
+                <p>ride</p>
             </div>
-            <div class="key">A
-                <p>Lorem</p>
+            <div class="key">j
+                <p>snare</p>
             </div>
-            <div class="key">A
-                <p>Lorem</p>
+            <div class="key">k
+                <p>tom</p>
             </div>
-            <div class="key">A
-                <p>Lorem</p>
+            <div class="key">l
+                <p>tink</p>
             </div>
         </section>
     </div>
