--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             </div>
         </section>
     </div>
+
+    <audio src=""></audio>
     <script src="./js/main.js"></script>
 </body>
 
