sound playing added

--- a/index.html
+++ b/index.html
@@ -13,37 +13,45 @@
 <body>
     <div class="wrapper">
         <section class="key-section">
-            <div data-key class="key">a
+            <div data-key="65" data-key class="key">a
                 <p>clap</p>
             </div>
-            <div class="key">s
+            <div data-key="83" class="key">s
                 <p>hihat</p>
             </div>
-            <div class="key">d
+            <div data-key="68" class="key">d
                 <p>kick</p>
             </div>
-            <div class="key">f
+            <div data-key="70" class="key">f
                 <p>openhat</p>
             </div>
-            <div class="key">g
+            <div data-key="71" class="key">g
                 <p>800m</p>
             </div>
-            <div class="key">h
+            <div data-key="72" class="key">h
                 <p>ride</p>
             </div>
-            <div class="key">j
+            <div data-key="74" class="key">j
                 <p>snare</p>
             </div>
-            <div class="key">k
+            <div data-key="75" class="key">k
                 <p>tom</p>
             </div>
-            <div class="key">l
+            <div data-key="76" class="key">l
                 <p>tink</p>
             </div>
         </section>
     </div>
 
-    <audio src=""></audio>
+    <audio data-key="65" src="./sounds/clap.mp3"></audio>
+    <audio data-key="83" src="./sounds/hihat.mp3"></audio>
+    <audio data-key="68" src="./sounds/kick.mp3"></audio>
+    <audio data-key="70" src="./sounds/openhat.mp3"></audio>
+    <audio data-key="71" src="./sounds/boom.mp3"></audio>
+    <audio data-key="72" src="./sounds/ride.mp3"></audio>
+    <audio data-key="74" src="./sounds/snare.mp3"></audio>
+    <audio data-key="75" src="./sounds/tom.mp3"></audio>
+    <audio data-key="76" src="./sounds/tink.mp3"></audio>
     <script src="./js/main.js"></script>
 </body>
 
