fixes, added background image, edited css

--- a/index.html
+++ b/index.html
@@ -11,38 +11,40 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <section class="key-section">
-            <div data-key="65" data-key class="key">a
-                <p>clap</p>
-            </div>
-            <div data-key="83" class="key">s
-                <p>hihat</p>
-            </div>
-            <div data-key="68" class="key">d
-                <p>kick</p>
-            </div>
-            <div data-key="70" class="key">f
-                <p>openhat</p>
-            </div>
-            <div data-key="71" class="key">g
-                <p>800m</p>
-            </div>
-            <div data-key="72" class="key">h
-                <p>ride</p>
-            </div>
-            <div data-key="74" class="key">j
-                <p>snare</p>
-            </div>
-            <div data-key="75" class="key">k
-                <p>tom</p>
-            </div>
-            <div data-key="76" class="key">l
-                <p>tink</p>
-            </div>
-        </section>
-    </div>
-
+    <main class="background">
+        <div class="bg"></div>
+        <div class="wrapper">
+            <section class="key-section">
+                <div data-key="65" data-key class="key">a
+                    <p>clap</p>
+                </div>
+                <div data-key="83" class="key">s
+                    <p>hihat</p>
+                </div>
+                <div data-key="68" class="key">d
+                    <p>kick</p>
+                </div>
+                <div data-key="70" class="key">f
+                    <p>openhat</p>
+                </div>
+                <div data-key="71" class="key">g
+                    <p>800m</p>
+                </div>
+                <div data-key="72" class="key">h
+                    <p>ride</p>
+                </div>
+                <div data-key="74" class="key">j
+                    <p>snare</p>
+                </div>
+                <div data-key="75" class="key">k
+                    <p>tom</p>
+                </div>
+                <div data-key="76" class="key">l
+                    <p>tink</p>
+                </div>
+            </section>
+        </div>
+    </main>
     <audio data-key="65" src="./sounds/clap.mp3"></audio>
     <audio data-key="83" src="./sounds/hihat.mp3"></audio>
     <audio data-key="68" src="./sounds/kick.mp3"></audio>
